fixed overflow when screen size is small width for studio details

--- a/react-app/src/components/Studios/StudioDetails.css
+++ b/react-app/src/components/Studios/StudioDetails.css
@@ -40,8 +40,9 @@ body {
 }
 
 .studio-details-name {
-    font-size: 24px;
+    font-size: 20px;
     font-weight: bolder;
+    width: 94%;
 }
 
 .studio-details-location {
